Changing the String format to DateTime in dt_Vendas